検索フォームの賃料をプルダウンに変更、ログイン後のページ先をdeviseのcontroller前に変更

--- a/app/views/admins/estates/edit.html.erb
+++ b/app/views/admins/estates/edit.html.erb
@@ -36,9 +36,9 @@
             <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :間取り図画像 %>
@@ -48,9 +48,9 @@
             <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -62,9 +62,9 @@
             <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像２ %>
@@ -74,9 +74,9 @@
             <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -88,9 +88,9 @@
             <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像４ %>
@@ -100,9 +100,9 @@
             <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -114,9 +114,9 @@
             <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像６ %>
@@ -126,9 +126,9 @@
             <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -140,9 +140,9 @@
             <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像８ %>
@@ -152,9 +152,9 @@
             <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-10" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -166,9 +166,9 @@
             <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-11" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像１０ %>
@@ -178,9 +178,9 @@
             <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-12" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
       </div>
       <div class="row" style="margin-right: 1px">
@@ -192,9 +192,9 @@
             <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-13" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像１２ %>
@@ -204,9 +204,9 @@
             <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "150x150" %>
          </button>
          <div class="modal fade text-center m-3" id="myModal-14" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "1000x650" %>
+            <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "1400x550" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
          </div>
       </div>
       <div class="row justify-content-center" style="padding: 80px 0;">
