--- a/app/views/customers/estates/_ranks.html.erb
+++ b/app/views/customers/estates/_ranks.html.erb
@@ -37,6 +37,6 @@
       <% end %>
     </div>
   <% else %>
-    <div class="text-center pt-5">現在、物件情報はございません。<br>新着物件が出るまでもう少々お待ちください。</div>
+    <div class="text-center pt-5">現在、お気に入りされた物件情報はございません。<br>お気に入りされる物件が出てくるまでもう少々お待ちください。</div>
   <% end %>
 </div>
