--- a/app/views/customers/estates/_search.html.erb
+++ b/app/views/customers/estates/_search.html.erb
@@ -29,8 +29,18 @@
     [["1R"],["1K"],["1DK"],["1LDK"],["2K"],["2DK"],["2LDK"],["3DK"],["3LDK"],
     ["4LDK"],["5LDK"]], {include_blank: "間取り"} %>
 
-    <%= f.number_field :price_gteq, :placeholder => "賃料 (半角数字)", style: "border-width: thin; margin-left: 1px; height: 22px; border-radius: 2px;" %> 〜
-    <%= f.number_field :price_lteq, :placeholder => "賃料 (半角数字)", style: "border-width: thin; height: 22px; border-radius: 2px;" %>
+    <%= f.select :price_gteq,
+    [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
+    ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
+    ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
+    ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
+    ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(下限)"} %> 〜
+    <%= f.select :price_lteq,
+    [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
+    ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
+    ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
+    ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
+    ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(上限)"} %>
   </div>
   <div class="search_field">
     <%= f.search_field :keyword, value: @keywords,
