--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -39,12 +39,18 @@
       <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "475x475" %>
     </div>
   </div>
+
   <% if customer_signed_in? %>
     <div class="text-center" style="padding: 100px 0;">
       <%= link_to "お問い合わせ", new_estate_research_path(@estate), class: "search btn-sm btn-outline-secondary", :style=>"text-decoration: none; padding: 20px 60px;" %>
     </div>
   <% else %>
-
+    <div class="text-center" style="padding: 100px 0;">
+      <%= link_to "お問い合わせ", new_customer_session_path, class: "search btn-sm btn-outline-secondary", :style=>"text-decoration: none; padding: 20px 60px;" %>
+    </div>
+  <% end %>
+  
+  <% unless customer_signed_in? %>
     <div class="row">
       <div class="col-10 text-right" style="padding-top: 20px;">
         <p>お問い合わせするにはログインが必要です。<br/>会員登録済みの方はログインへ→</p>
