--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -15,11 +15,11 @@
       </div>
       <div class="row pb-4">
         <div class="col-2 text-center"><%= f.label :住所 %></div>
-        <div class="col"><%= f.text_field :address, placeholder: "東京都新宿区〇〇〇〇〇〇", :size=>"103" %></div>
+        <div class="col"><%= f.text_field :address, value: "東京都", :size=>"103" %></div>
       </div>
       <div class="row pb-4">
         <div class="col-2 text-center"><%= f.label :賃料 %></div>
-        <div class="col-2"><%= f.number_field :price, placeholder: "90000 (半角数字)" %></div>
+        <div class="col-2"><%= f.number_field :price, value: "0000" %></div>
         <div class="col-2 text-center pt-1"><%= f.label :間取り %></div>
         <div class="col-2"><%= f.text_field :floor, placeholder: "2LDK(半角数字)" %></div>
       </div>
