--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -29,8 +29,13 @@
         <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"パスワード（確認）", :size => "50" %>
       </div>
     </div>
-    <div class="row justify-content-center" style="padding-bottom: 120px;">
+    <div class="row justify-content-center" style="padding-bottom: 30px;">
       <%= f.submit "登録", class: "search" %>
+    </div>
+    <div class="row">
+      <div class="col text-right" style="margin-right: 190px; padding-bottom: 100px;">
+        <%= link_to "ログインページへ", new_customer_session_path %>
+      </div>
     </div>
   </div>
 <% end %>
