--- a/app/views/customers/customers/_header.html.erb
+++ b/app/views/customers/customers/_header.html.erb
@@ -4,6 +4,21 @@
 
     <%= render "customers/estates/search" %>
 
+    <!--<label>都市名：</label>-->
+    <!--<input id="cityname" type="text" size="14" maxlength="14" placeholder="Tokyo">-->
+    <!--<button id="btn">検索</button><br>-->
+    <!--<span>場所 :</span>-->
+    <!--<span id="place"></span><br>-->
+    <!--<span>最高気温 :</span>-->
+    <!--<span id="temp_max"></span>-->
+    <!--<span> ℃</span><br>-->
+    <!--<span>最低気温 :</span>-->
+    <!--<span id="temp_min"></span>-->
+    <!--<span> ℃</span><br>-->
+    <!--<span>天気 :</span>-->
+    <!--<span id="weather"></span>-->
+    <!--<div id="icon"><img id="img"></div>-->
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
     </button>
