--- a/app/views/admins/researches/_researches.html.erb
+++ b/app/views/admins/researches/_researches.html.erb
@@ -1,4 +1,12 @@
-<div class="text-center" style="padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">
+<div class="text-center" style="padding: 130px 0 50px 0; font-size: 20px; font-weight: bold;">
+  <%= form_with url: admins_researches_search_path, local: true, method: :get do |f| %>
+    <%= select(@search_content, :search_method, [["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
+    <%= text_field(@search_content, :search_word) %>
+    <%= f.submit "検索" %>
+  <% end %>
+</div>
+
+<div class="text-center" style="padding-bottom: 50px; font-size: 30px; font-weight: bold;">
   お問い合わせ一覧
 </div>
 <div class="container">
