--- a/app/views/admins/researches/_researches.html.erb
+++ b/app/views/admins/researches/_researches.html.erb
@@ -1,7 +1,9 @@
 <div class="text-center" style="padding: 130px 0 50px 0; font-size: 20px; font-weight: bold;">
-  <%= form_with url: admins_researches_search_path, local: true, method: :get do |f| %>
-    <%= select(@search_content, :search_method, [["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
-    <%= text_field(@search_content, :search_word) %>
+  <%= form_with(scope: :search, url: admins_researches_path, method: :get, local: true) do |f| %>
+    <%= f.label :名前 %>
+    <%= f.text_field :name %>
+    <%= f.date_field :created_at_from %> ~
+    <%= f.date_field :created_at_to %>
     <%= f.submit "検索" %>
   <% end %>
 </div>
