管理者　会員一覧・物件一覧の検索機能追加

--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="row pb-4">
         <div class="col-2 text-center"><%= f.label :住所 %></div>
-        <div class="col"><%= f.text_field :address, value: "東京都", :size=>"103" %></div>
+        <div class="col"><%= f.text_field :address, :size=>"103" %></div>
       </div>
       <div class="row pb-4">
         <div class="col-2 text-center"><%= f.label :賃料 %></div>
