--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -1,50 +1,64 @@
 <%= render "admins/customers/header", researches: @researches %>
 
-<div class="text-center" style="padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">
+<div class="text-center" style="padding: 130px 0 50px 0; font-size: 20px; font-weight: bold;">
+  <%= form_with(scope: :search, url: admins_customers_path, method: :get, local: true) do |f| %>
+    <%= f.label :名前 %>
+    <%= f.text_field :name, value: @search_params[:name] %>
+    <%= f.label :電話番号 %>
+    <%= f.number_field :phone_number.to_s, value: @search_params[:phone_number], placeholder:"080... (半角数字)" %>
+    <%= f.submit "検索" %>
+  <% end %>
+</div>
+
+<div class="text-center" style="font-size: 30px; font-weight: bold;">
   会員一覧
 </div>
 
-<div class="text-center pt-3 pb-3" style="font-size: 20px; font-weight: bold;">
+<div class="text-center pt-5 pb-5" style="font-size: 20px; font-weight: bold;">
   <%= flash[:status] %>
 </div>
 
 <div class="container">
-  <div class="card shadow">
-    <div class="row">
-      <div class="col">
-        <table class="table">
-          <tr>
-            <th class="estate" style="width: 230px;">お名前</th>
-            <th class="name" style="width: 380px;">メールアドレス</th>
-            <th class="name" style="width: 35px;">電話番号</th>
-            <th class="status" style="width: 100px;">問い合わせ</th>
-            <th class="status" style="width: 70px;">いいね</th>
-            <th class="status" style="width: 100px;">ステータス</th>
-            <th class="status" style="width: 55px;"></th>
-          </tr>
-          <% if @customers.present? %>
+  <% if @customers.present? %>
+    <div class="card shadow" style="margin-bottom: 100px;">
+      <div class="row">
+        <div class="col">
+          <table class="table">
+            <tr>
+              <th class="estate" style="width: 230px;">お名前</th>
+              <th class="name" style="width: 380px;">メールアドレス</th>
+              <th class="name" style="width: 35px;">電話番号</th>
+              <th class="status" style="width: 100px;">問い合わせ</th>
+              <th class="status" style="width: 70px;">いいね</th>
+              <th class="status" style="width: 100px;">ステータス</th>
+              <th class="status" style="width: 55px;"></th>
+            </tr>
             <% @customers.each do |customer| %>
-              <tr>
-                <td><%= customer.name %> 様</td>
-                <td><%= customer.email %></td>
-                <td><%= customer.phone_number %></td>
-                <td class="researches text-center"><%= link_to "#{customer.researches.count}", admins_customer_researches_path(customer) %></td>
-                <td class="favorites text-center"><%= link_to "#{customer.favorites.count}", admins_customer_favorites_path(customer) %></td>
-                <% if customer.status == "有効" %>
-                  <td class="status text-center" style="color: green;"><%= customer.status %></td>
-                <% elsif customer.status == "無効" %>
-                  <td class="status text-center" style="color: red;"><%= customer.status %></td>
-                <% end %>
-                <td><%= link_to "編集", edit_admins_customer_path(customer) %></td>
-              </tr>
+            <tr>
+              <td><%= customer.name %> 様</td>
+              <td><%= customer.email %></td>
+              <td><%= customer.phone_number %></td>
+              <td class="researches text-center"><%= link_to "#{customer.researches.count}", admins_customer_researches_path(customer) %></td>
+              <td class="favorites text-center"><%= link_to "#{customer.favorites.count}", admins_customer_favorites_path(customer) %></td>
+              <% if customer.status == "有効" %>
+                <td class="status text-center" style="color: green;"><%= customer.status %></td>
+              <% elsif customer.status == "無効" %>
+                <td class="status text-center" style="color: red;"><%= customer.status %></td>
+              <% end %>
+              <td><%= link_to "編集", edit_admins_customer_path(customer) %></td>
+            </tr>
             <% end %>
-          <% else %>
-　          <div class="text-center pt-5">カスタマーはおりません。</div>
-　        <% end %>
-        </table>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
+  <% else %>
+    <% if @search_params.present? %>
+      <div class="text-center">検索条件に合致した会員はおりません。</div>
+    <% else %>
+      <div class="text-center">会員はおりません。</div>
+    <% end %>
+　<% end %>
 </div>
 <%= paginate @customers %>
 
