多言語化機能途中

--- a/app/views/admins/customers/_header.html.erb
+++ b/app/views/admins/customers/_header.html.erb
@@ -4,7 +4,7 @@
 
     <% if researches.present? %>
       <div class="researches text-left" style="font-size: 20px; font-weight: bold;">
-        <%= link_to "未対応のお問い合わせが#{researches.count}件あります。", admins_researches_path %>
+        <%= link_to "未対応のお問い合わせが#{researches.count}件ございます。", admins_researches_path %>
       </div>
     <% end %>
 
