--- a/app/views/admins/favorites/index.html.erb
+++ b/app/views/admins/favorites/index.html.erb
@@ -40,7 +40,7 @@
       </div>
     <% end %>
   <% else %>
-    <div class="text-center">お気に入りされた物件はありません。</div>
+    <div class="text-center" style="padding-top: 70px; font-size: 20px; font-weight: bold;">お気に入りされた物件はございません。</div>
   <% end %>
 </div>
 <%= paginate @favorites %>
