--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -79,7 +79,7 @@
       </div>
     <% end %>
   <% else %>
-    <div class="text-center" style="padding: 30px 0 50px 0;">お気に入りされた物件はありません。</div>
+    <div class="text-center" style="padding: 30px 0 50px 0; font-size: 20px;">お気に入りされた物件はございません。</div>
   <% end %>
 </div>
 
@@ -134,7 +134,7 @@
       </div>
     <% end %>
   <% else %>
-    <div class="text-center">お問い合わせされた物件はありません。</div>
+    <div class="text-center" style="font-size: 20px; font-weight: bold;">お問い合わせされた物件はございません。</div>
   <% end %>
 </div>
 <%= paginate @researches %>
