--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -10,15 +10,13 @@
   <% end %>
 </div>
 
-<div class="text-center" style="font-size: 30px; font-weight: bold;">
-  会員一覧
-</div>
+<div class="text-center" style="font-size: 30px; font-weight: bold;">会員一覧</div>
 
-<div class="text-center pt-5 pb-5" style="font-size: 20px; font-weight: bold;">
+<div class="text-center pt-5 pb-5" style="font-size: 20px; font-weight: bold; color: #FA601A;">
   <%= flash[:status] %>
 </div>
 
-<div class="container">
+<div class="container" style="margin-bottom: 20px;">
   <% if @customers.present? %>
     <div class="card shadow" style="margin-bottom: 100px;">
       <div class="row">
@@ -54,9 +52,9 @@
     </div>
   <% else %>
     <% if @search_params.present? %>
-      <div class="text-center">検索条件に合致した会員はおりません。</div>
+      <div class="text-center" style="font-size: 20px; font-weight: bold;">検索条件に合致した会員はおりません。</div>
     <% else %>
-      <div class="text-center">会員はおりません。</div>
+      <div class="text-center" style="font-size: 20px; font-weight: bold;">会員はおりません。</div>
     <% end %>
 　<% end %>
 </div>
