--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -26,14 +26,11 @@
 </div>
 
 <div class="text-center" style="font-size: 30px; font-weight: bold;">
-  入稿物件一覧
+  物件一覧
 </div>
 
-<div class="notice text-center" style="padding-bottom: 50px; color: #FA601A;">
+<div class="notice text-center pt-5 pb-5" style="font-size: 20px; font-weight: bold; color: #FA601A;">
   <%= flash[:new] %>
-</div>
-
-<div class="notice text-center" style="padding-bottom: 50px; color: #FA601A;">
   <%= flash[:notice] %>
 </div>
 
