--- a/app/views/admins/researches/_research.html.erb
+++ b/app/views/admins/researches/_research.html.erb
@@ -56,7 +56,7 @@
       </div>
     <% end %>
   <% else %>
-    <div class="text-center">お問い合わせされた物件はありません。</div>
+    <div class="text-center" style="padding-top: 70px; font-size: 20px; font-weight: bold;">お問い合わせされた物件はございません。</div>
   <% end %>
 </div>
 <%= paginate researches %>
