seedファイル訂正

--- a/app/views/customers/estates/finish.html.erb
+++ b/app/views/customers/estates/finish.html.erb
@@ -1,3 +1,5 @@
+<%= render "customers/customers/header" %>
+
 <div class="container" style=" padding-top: 150px;">
   <div class="row justify-content-center" style=" padding-top: 100px; font-weight: bold; font-size: 45px;">
     お問い合わせ
