--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "customers/customers/header" %>
+
 <%= attachment_image_tag @estate, :background_image, format: 'jpeg', width: "100%;", heigth: "10%;" %>
 <div class="container" style="margin-bottom: 50px;">
   <div class="text-center" style="padding: 80px 0 80px 0; font-size: 30px; font-weight: bold;">
