--- a/app/views/customers/customers/unsubscribe.html.erb
+++ b/app/views/customers/customers/unsubscribe.html.erb
@@ -1,3 +1,5 @@
+<%= render "customers/customers/header" %>
+
 <div class="text-center" style="padding: 130px 0 30px 0; font-size: 30px; font-weight: bold;">退会画面</div>
 <div class="container">
   <div class="row pt-4">
