--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= render "customers/customers/header" %>
+
 <div class="text-center" style="padding: 150px 0 50px 0; font-size: 40px;">会員登録</div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
