--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -6,22 +6,24 @@
     <%= f.text_field :name, value: @search_params[:name] %>
     <%= f.label :住所 %>
     <%= f.text_field :address, value: @search_params[:address] %>
-    <%= f.label :間取り %>
-    <%= f.collection_select :floor, Estate.group(:floor), :floor, :floor, selected: @search_params[:floor], include_blank: "間取り" %>
-    <%= f.label :賃料 %>
-    <%= f.select :price_from,
-      [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
-      ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
-      ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
-      ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
-      ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(下限)", selected: @search_params[:price_from]} %> ~
-    <%= f.select :price_to,
-      [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
-      ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
-      ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
-      ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
-      ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(上限)", selected: @search_params[:price_to]} %>
-    <%= f.submit "検索" %>
+    <div class="text-center" style="font-size: 20px; font-weight: bold;">
+      <%= f.label :間取り %>
+      <%= f.collection_select :floor, Estate.group(:floor), :floor, :floor, selected: @search_params[:floor], include_blank: "間取り" %>
+      <%= f.label :賃料 %>
+      <%= f.select :price_from,
+        [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
+        ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
+        ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
+        ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
+        ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(下限)", selected: @search_params[:price_from]} %> ~
+      <%= f.select :price_to,
+        [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
+        ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
+        ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
+        ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
+        ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(上限)", selected: @search_params[:price_to]} %>
+      <%= f.submit "検索" %>
+    </div>
   <% end %>
 </div>
 
