--- a/app/views/customers/researches/new.html.erb
+++ b/app/views/customers/researches/new.html.erb
@@ -27,7 +27,7 @@
               </button>
             </h2>
           </div>
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
               <div class="row">
                 <div class="col-3">
