--- a/app/assets/stylesheets/admins/calendars.scss
+++ b/app/assets/stylesheets/admins/calendars.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the customers::calendrs controller here.
+// Place all the styles related to the admins::calendars controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
