--- a/app/views/admins/researches/show.html.erb
+++ b/app/views/admins/researches/show.html.erb
@@ -1,7 +1,7 @@
 <header class="sticky-top shadow-sm" style="width: 100%;">
   <nav class="navbar navbar-expand-xs navbar-light">
     <a class="navbar-brand p-0" href="/admins/sign_in"><%= image_tag('logo1.jpg') %></a>
-    
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,6 +19,9 @@
           </li>
           <li class="nav-item">
             <%= link_to "お問い合わせ一覧", admins_researches_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "カレンダー", admins_calendars_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
           </li>
           <li class="nav-item">
             <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
@@ -71,9 +74,13 @@
           <tr>
             <th></th>
             <% if @research.status == "未対応" %>
-              <td class="name" style="width: 30px;"><%= link_to "対応済にする", admins_research_support_path(@research), data: { confirm: '対応済にして宜しいですか？' }, method: :patch %></td>
+              <td class="name" style="width: 30px;">
+                <%= link_to "対応済にする", admins_research_support_path(@research), data: { confirm: '対応済にして宜しいですか？' }, method: :patch %>
+              </td>
             <% elsif @research.status == "対応済" %>
-              <td class="name" style="width: 30px;"><%= link_to "未対応にする", admins_research_support_path(@research), data: { confirm: '未対応にして宜しいですか？' }, method: :patch %></td>
+              <td class="name" style="width: 30px;">
+                <%= link_to "未対応にする", admins_research_support_path(@research), data: { confirm: '未対応にして宜しいですか？' }, method: :patch %>
+              </td>
             <% end %>
           </tr>
         </table>
