--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -1,140 +1,36 @@
 <%= render "customers/customers/header" %>
 
-<div class="text-center" style="padding: 130px 0 30px 0; font-size: 30px; font-weight: bold;">マイページ</div>
-<div class="container">
-  <div class="card shadow">
-    <div class="row pt-4">
-      <div class="col-3 text-center pt-1" style="font-weight: bold; font-size: 25px;">お名前</div>
-      <div class="col-7">
-        <div class="card" style="font-size: 25px;">
-          <%= @customer.name %>
-        </div>
-      </div>
-    </div>
-    <div class="row pt-4">
-      <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">
-        メールアドレス
-      </div>
-      <div class="col-7">
-        <div class="card" style="font-size: 25px;">
-          <%= @customer.email %>
-        </div>
-      </div>
-      <div class="col pt-2">
-        <%= link_to "編集", edit_customer_registration_path, class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;" %>
-      </div>
-    </div>
-    <div class="row pt-4 pb-4">
-      <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">
-        電話番号
-      </div>
-      <div class="col-7">
-        <div class="card" style="font-size: 25px;">
-          <%= @customer.phone_number %>
-        </div>
-      </div>
-      <div class="col pt-2">
-        <%= link_to "退会", customers_unsubscribe_path, class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;" %>
-      </div>
+<div class="container"  id="accordionExample" style="padding: 160px 0 70px 0;">
+  <div class="row justify-content-center" style="padding-bottom: 50px;">
+    <div class="profile_image">
+      <div class="text-center pb-4" style="font-size: 25px; font-weight: bold;">プロフィール</div>
+      <%= link_to attachment_image_tag(@customer, :profile_image, format: 'jpeg', size: "200x200", fallback: "no-image.jpeg", size: "200x200"), edit_customer_registration_path, class: "profile" %>
     </div>
   </div>
+  <div class="row">
+    <div class="col-4 text-center">
+      <button class="btn btn-link" style="font-size: 100px;" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        <i class="fas fa-heart"></i>
+        <div style="font-size: 22px; font-weight: bold;">お気に入りした物件</div>
+      </button>
+    </div>
+    <div class="col-4 text-center">
+      <button class="btn btn-link" style="font-size: 100px;" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <i class="fas fa-comment"></i>
+        <div style="font-size: 22px; font-weight: bold;">お問い合わせした物件</div>
+      </button>
+    </div>
+    <div class="col-4 text-center">
+      <%= link_to customers_unsubscribe_path, style: "font-size: 100px;" do %>
+        <i class="fas fa-sad-tear"></i>
+        <div style="font-size: 22px; font-weight: bold;">退会</div>
+      <% end %>
+    </div>
+  </div>
+  <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+    <%= render "customers/favorites/index", favorites: @favorites %>
+  </div>
+  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+    <%= render "customers/researches/index", researches: @researches %>
+  </div>
 </div>
-
-<div class="text-center" style="padding:80px 0 50px 0; font-size: 30px; font-weight: bold;">お気に入り物件</div>
-<div class="container">
-  <% if @favorites.present? %>
-    <% @favorites.reverse.each do |favorite| %>
-      <div class="card shadow" style="margin-bottom: 30px; padding-bottom: 0;">
-        <div class="row">
-          <div class="col-md-2 col-sm-12" style= "padding-bottom: 0;">
-            <%= link_to attachment_image_tag(favorite.estate, :background_image, format: 'jpeg', size: "210x210"), estate_path(favorite.estate), {class: "image-top"} %>
-          </div>
-          <div class="col-md-10 col-sm-12" style="padding-left: 37px;">
-            <table class="table table-striped" style="margin-bottom: 0;">
-              <tr>
-                <th class="th" style="width: 15%;">物件名</th>
-                <td class="name"><%= favorite.estate.name %>　<%= favorite.estate.room_number %>号室</td>
-              </tr>
-              <tr>
-                <th>住所</th>
-                <td class="address"><%= favorite.estate.address %></td>
-              </tr>
-              <tr>
-                <th>賃料</th>
-                <td>¥<%= favorite.estate.price.to_s(:delimited) %></td>
-              </tr>
-              <tr>
-                <th>お気に入り数</th>
-                <td>
-                  <% if favorite.estate.favorited_by?(current_customer) %>
-                    <%= link_to estate_favorites_path(favorite.estate), method: :delete, local: true, style: "font-size: 22px; " do %>
-                    <i class="fas fa-building"></i><%= favorite.estate.favorites.count %>
-                    <% end %>
-                  <% end %>
-                </td>
-              </tr>
-            </table>
-          </div>
-        </div>
-      </div>
-    <% end %>
-  <% else %>
-    <div class="text-center" style="padding: 30px 0 50px 0; font-size: 20px;">お気に入りされた物件はございません。</div>
-  <% end %>
-</div>
-
-<div class="text-center" style="padding: 70px 0 50px 0; font-size: 30px; font-weight: bold;">お問い合わせ物件</div>
-<div class="container" style="padding-bottom: 20px;">
-  <% if @researches.present? %>
-    <% @researches.each_with_index do |research, i| %>
-      <div class="card shadow" style="margin-bottom: 30px; height: auto;">
-        <div class="row">
-          <div class="col-md-2 col-sm-12">
-            <%= attachment_image_tag research.estate, :background_image, format: 'jpeg', size: "200x200" %>
-          </div>
-          <div class="col-md-10 col-sm-12" style="padding-left: 26px;">
-            <table class="table table-striped" style="margin-bottom: 0;">
-              <tr>
-                <th class="th" style="width: 15%;">物件名</th>
-                <td class="name"><%= research.estate.name %>　<%= research.estate.room_number %>号室</td>
-              </tr>
-              <tr>
-                <th>住所</th>
-                <td class="address"><%= research.estate.address %></td>
-              </tr>
-              <tr>
-                <th>賃料</th>
-                <td>¥<%= research.estate.price.to_s(:delimited) %></td>
-              </tr>
-              <tr>
-                <th>お問い合わせ日時</th>
-                <td><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
-              </tr>
-            </table>
-          </div>
-        </div>
-
-        <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#key_<%= i %>" aria-expand="false" aria-controls="key_<%= i %>">
-          <div class="col-2">お問い合わせ内容</div>
-        </button>
-        <div class="collapse" id="key_<%= i %>">
-          <div class="row pb-4 pt-4">
-            <div class="col-2 mr-4 text-center" style="font-weight: bold;">タイトル</div>
-            <div class="card col-9" style="height:60px; overflow:auto;">
-              <div><%= research.title %></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-2 mr-4 text-center" style="font-weight: bold;">本文</div>
-            <div class="card col-9 mb-4" style="height:150px; overflow:auto;">
-              <div><%= research.body %></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    <% end %>
-  <% else %>
-    <div class="text-center" style="font-size: 20px; font-weight: bold;">お問い合わせされた物件はございません。</div>
-  <% end %>
-</div>
-<%= paginate @researches %>
