--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -5,7 +5,12 @@
   <%= render "customers/shared/error_messages", resource: resource %>
 
   <div class="container">
-    <div class="card shadow" style="margin-bottom: 150px;">
+    <div class="row justify-content-center pt-5 pb-4">
+      <%= attachment_image_tag(@customer, :profile_image, format: 'jpeg', size: "200x200", fallback: "no-image.jpeg", size: "200x200") %>
+    </div>
+    <div class="row pt-5 pb-4" style="margin-left: 420px;">
+      <%= f.file_field :profile_image %>
+    </div>
       <div class="row pt-5 pb-4">
         <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :お名前 %></div>
         <div class="col-7" style="font-size: 25px;"><%= f.text_field :name, :size => "50" %></div>
@@ -14,13 +19,12 @@
         <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :メールアドレス %></div>
         <div class="col-7" style="font-size: 25px;"><%= f.email_field :email, :size => "50" %></div>
       </div>
-      <div class="row" style="padding-bottom: 70px;">
+      <div class="row" style="padding-bottom: 60px;">
         <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :電話番号 %></div>
         <div class="col-7" style="font-size: 25px;"><%= f.text_field :phone_number, :size => "50" %></div>
       </div>
-      <div class="row justify-content-center pb-5">
+      <div class="row justify-content-center" style="padding-bottom: 100px;">
         <%= f.submit "保存", class: "search" %>
       </div>
-    </div>
   </div>
 <% end %>
